--- a/fire-financial-independence-retire-early.html
+++ b/fire-financial-independence-retire-early.html
@@ -110,6 +110,10 @@ Comon Sense Investing:<br>
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/pi-digits-500000-calculate">500000 digits of PI</a></li>
+
+<li><a href="/calculate-pi-digits-python-high-precision">Calculate PI digits (arbitrary-precision) using Python</a></li>
+
 <li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
 
 <li><a href="/perl-language">Perl language</a></li>
@@ -117,10 +121,6 @@ Comon Sense Investing:<br>
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
 
 <li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
-
-<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
-
-<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
