--- a/other-articles.html
+++ b/other-articles.html
@@ -89,11 +89,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li><br>
 <li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li><br>
 <li><a href="/bash-shell-redirections">Bash redirections</a></li><br>
+<li><a href="/pi-digits-500000-calculate">500000 digits of PI</a></li><br>
+<br>
 </ul></div> <!-- content -->
 </div><!-- content_page -->
 
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
+
+<li><a href="/pi-digits-500000-calculate">500000 digits of PI</a></li>
+
+<li><a href="/calculate-pi-digits-python-high-precision">Calculate PI digits (arbitrary-precision) using Python</a></li>
 
 <li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
 
@@ -102,10 +108,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
 
 <li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
-
-<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
-
-<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
