--- a/gnu-screen-quick-guide-cheatsheet.html
+++ b/gnu-screen-quick-guide-cheatsheet.html
@@ -140,6 +140,10 @@ When flow control is enabled, to send C-s and C-q key combinations to current wi
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
 
+<li><a href="/pi-digits-500000-calculate">500000 digits of PI</a></li>
+
+<li><a href="/calculate-pi-digits-python-high-precision">Calculate PI digits (arbitrary-precision) using Python</a></li>
+
 <li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
 
 <li><a href="/perl-language">Perl language</a></li>
@@ -147,10 +151,6 @@ When flow control is enabled, to send C-s and C-q key combinations to current wi
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
 
 <li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
-
-<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
-
-<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
