--- a/python-language.html
+++ b/python-language.html
@@ -118,11 +118,21 @@ We can use <b>flake8</b> tool to check style of python code:<br>
 <br>
 <a href="/virtualenv-python-virtual-environment">virtualenv - How to set up a python Virtual Environment</a><br>
 <br>
+<br>
+<br>
+<h4>Examples of code</h4><br>
+<a href="/calculate-pi-digits-python-high-precision">Calculate PI digits (arbitrary-precision) using Python</a><br>
+<br>
+<br>
 </div> <!-- content -->
 </div><!-- content_page -->
 
 <div class="sidebar_last"><h4 class="sidebar_title">Latest created articles</h4>
 <ul>
+
+<li><a href="/pi-digits-500000-calculate">500000 digits of PI</a></li>
+
+<li><a href="/calculate-pi-digits-python-high-precision">Calculate PI digits (arbitrary-precision) using Python</a></li>
 
 <li><a href="/flake8-python-check-source-code-pep8">Flake8 tool to check python source code</a></li>
 
@@ -131,10 +141,6 @@ We can use <b>flake8</b> tool to check style of python code:<br>
 <li><a href="/bash-shell-redirections">Bash redirections</a></li>
 
 <li><a href="/badblocks-e2fsck-scan-harddisk-howto">How to scan a hard disk partition using badblocks (or e2fsck)</a></li>
-
-<li><a href="/gdb-gnu-debugger-cheatsheet">GDB cheatsheet</a></li>
-
-<li><a href="/gnu-screen-quick-guide-cheatsheet">GNU Screen : Quick Reference : Cheatsheet</a></li>
 
 </ul>
 </div> <!-- sidebar last created -->
