--- a/sqlite3-cheat-sheet.html
+++ b/sqlite3-cheat-sheet.html
@@ -70,10 +70,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <br>
 <br>
 <h4>Install and open a database file</h4><br>
-Install sqlite3 (in Debian):<br>
+<b>Install sqlite3</b> (in Debian):<br>
 <code>$ sudo aptitude install sqlite3</code><br>
 <br>
-Open a database file:<br>
+<b>Open a database</b> file:<br>
 <code>$ sqlite3 database_file.db</code><br>
 <samp>SQLite version 3.8.8.3 2015-02-25 13:29:11<br>
 Enter &#34;.help&#34; for usage hints.</samp><br>
@@ -83,15 +83,15 @@ A prompt appears:<br>
 <br>
 <br>
 <h4>SQLITE3 COMMANDS</h4><br>
-Show all tables<br>
+<b>Show all tables</b><br>
 <code>sqlite&gt; .tables</code><br>
 <samp>NAMES    CLIENTS   SALES PRODUCTS</samp><br>
 <br>
-Quit<br>
+<b>Quit</b><br>
 <code>sqlite&gt; .quit</code><br>
 <br>
 <br>
-Show help:<br>
+<b>Show help</b>:<br>
 <code>sqlite&gt; .help</code><br>
 <samp>.backup ?DB? FILE      Backup DB (default &#34;main&#34;) to FILE<br>
 .bail on|off           Stop after hitting an error.  Default OFF<br>
@@ -105,18 +105,18 @@ Show help:<br>
 </samp><br>
 <br>
 <br>
-List all databases and their associated files:<br>
+<b>List all databases</b> and their associated files:<br>
 <code> sqlite&gt; .databases</code><br>
 <br>
 <br>
-Show schema of all tables:<br>
+<b>Show schema</b> of all tables:<br>
 <code> sqlite&gt; .schema</code><br>
 <br>
 Show schema of a table:<br>
 <code> sqlite&gt; .schema PRODUCTS</code><br>
 <samp>CREATE TABLE &#34;PRODUCTS&#34; (Id INTEGER PRIMARY KEY AUTOINCREMENT ,TStamp     INTEGER       NOT NULL  ,Name  VARCHAR(60)  NOT NULL ,Price      DECIMAL(10,5) NOT NULL);</samp><br>
 <br>
-Execute an UNIX command:<br>
+<b>Execute</b> an <b>UNIX command</b>:<br>
 <code> sqlite&gt;.system ls -l</code><br>
 <br>
 <br>
@@ -140,21 +140,21 @@ Other types like VARCHAR(N), DECIMAL(N, M) are assimilated to the former storage
 <br>
 <br>
 <h4>SQL</h4><br>
-Attach another database (client) from other file (client.db):<br>
+<b>Attach another database</b> (client) from other file (client.db):<br>
 <code>sqlite&gt; ATTACH DATABASE &#39;client.db&#39; AS client;</code><br>
 Now .database command shows client database too.<br>
 We can access client database tables preceded by &#39;client.&#39; prefix.<br>
 <br>
-Detach a previously attached database:<br>
+<b>Detach a</b> previously attached <b>database</b>:<br>
 <code>sqlite&gt; DETACH DATABASE client;</code><br>
 <br>
-Create a new table:<br>
+<b>Create a new table</b>:<br>
 <code>sqlite&gt; CREATE TABLE VARS (name VARCHAR(128) PRIMARY KEY  ,value   VARCHAR(512)  NOT NULL);</code><br>
 <br>
 Create the table only if it does not exist already:<br>
 <code>sqlite&gt; CREATE TABLE <b>IF NOT EXISTS</b> VARS (name VARCHAR(128) PRIMARY KEY  ,value   VARCHAR(512)  NOT NULL);</code><br>
 <br>
-Show contents of a table:<br>
+<b>Show contents of a table</b>:<br>
 <code>sqlite&gt; select * from CLIENTS;</code>                <br>
 <samp>1|Vincent<br>
 2|John</samp><br>
@@ -165,10 +165,10 @@ Display at most three rows.<br>
 This LIMIT keyword can be used along ORDER BY to specify a column to order results.<br>
 <code>sqlite&gt; select * from CLIENTS ORDER BY Name DESC LIMIT 3</code><br>
 <br>
-Delete a table:<br>
+<b>Delete a table</b>:<br>
 <code>sqlite&gt; drop table ticket;</code><br>
 <br>
-Rename a table:<br>
+<b>Rename a table</b>:<br>
 <code>sqlite&gt; .tables</code><br>
 <samp>CASHIER</samp><br>
 <code>sqlite&gt; alter table CASHIER rename to CLIENTS;<br>
@@ -176,7 +176,7 @@ sqlite&gt; .tables</code><br>
 <samp>CLIENTS</samp><br>
 <br>
 <br>
-Copy contents from a table into another one:<br>
+<b>Copy contents from a table into another one</b>:<br>
 <code>sqlite&gt; INSERT INTO CLIENT SELECT * FROM CLIENT_OLD;</code><br>
 Columns returned by select have to match elements expected by insert.<br>
 <a href="https://www.sqlite.org/lang_insert.html">SQL As Understood By SQLite (Insert)</a><br>
@@ -185,7 +185,7 @@ Copy some contents from a table into another one:<br>
 <code>sqlite&gt; INSERT INTO CLIENT (name,value,state,address) SELECT name,value,-1,address FROM CLIENT_OLD;</code><br>
 <br>
 <br>
-Insert a column in a table, but if a conflict arises because of a UNIQUE or PRIMARY KEY constraint then replace that column:<br>
+<b>Insert a column in a table</b>, but if a conflict arises because of a UNIQUE or PRIMARY KEY constraint then replace that column:<br>
 <code>sqlite&gt; INSERT OR REPLACE INTO VARS (name,value) VALUES(&#39;color&#39;, &#39;blue&#39;);</code><br>
 <a href="https://www.sqlite.org/lang_conflict.html">SQL As Understood By SQLite (On conflict)</a><br>
 <br>
@@ -207,15 +207,15 @@ If we want to fill Difficult column with data from other table e.g: BLOCK where 
 <br>
 <br>
 <h5>Transactions</h5><br>
-Start a transaction:<br>
+<b>Start</b> a transaction:<br>
 <code>sqlite&gt;BEGIN</code><br>
 <br>
 Perform some operations...<br>
 <br>
-Commit the transaction:<br>
+<b>Commit</b> the transaction:<br>
 <code>sqlite&gt;COMMIT</code><br>
 <br>
-If something was wrong you can roll back the transaction instead of committing it.<br>
+If something was wrong you can <b>roll back</b> the transaction instead of committing it.<br>
 <code>sqlite&gt;ROLLBACK</code><br>
 <br>
 <br>
