quotes-interesting.html: Quote of apocryphal Mark Twain.

--- a/quotes-interesting.html
+++ b/quotes-interesting.html
@@ -88,6 +88,7 @@ Then why call him God?&#34;<br>
 <li>Originality consists in thinking for yourself, not in thinking differently from other people. (James Fitzjames Stephen)</li><br>
 <li>You never change things by fighting the existing reality. To change something, build a new model that makes the existing model obsolete. (Buckminster Fuller)</li><br>
 <li>The opposite of love is not hate, it&#39;s indifference. The opposite of art is not ugliness, it&#39;s indifference. The opposite of faith is not heresy, it&#39;s indifference. And the opposite of life is not death, it&#39;s indifference. (Elie Wiesel)</li><br>
+<li>Never argue with stupid people, they will drag you down to their level and then beat you with experience. (Apocryphal Mark Twain)</li><br>
 </ul><br>
 <br>
 <h4>Politics</h4><br>
