bitcoin-multimedia-podcast-videos-related.html: added channel of Bitcoin Magazine in YouTube.

--- a/bitcoin-multimedia-podcast-videos-related.html
+++ b/bitcoin-multimedia-podcast-videos-related.html
@@ -123,6 +123,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <a href="https://www.youtube.com/channel/UCzdDFk3EYSyHr4eMMIxRBrg/videos">https://www.youtube.com/channel/UCzdDFk3EYSyHr4eMMIxRBrg/videos</a><br>
 <br>
 <br>
+<br>
+<h5>Bitcoin Magazine (Youtube)</h5><br>
+<a href="https://www.youtube.com/c/BitcoinMagazine/videos">Bitcoin Magazine (Youtube)</a><br>
+<br>
+<br>
 </div> <!-- content -->
 </div><!-- content_page -->
 
